<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@+id/root" android:background="@drawable/bg5"
              android:layout_width="fill_parent" android:layout_height="fill_parent"
              xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/toolbar" android:layout_width="fill_parent"
                    android:layout_height="46.0dip">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="#ffffffff"
                  android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/app_name" android:layout_centerHorizontal="true"
                  android:layout_centerVertical="true"/>
        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/ibtn_add" android:background="@drawable/btn_add"
               android:clickable="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                  android:layout_centerVertical="true"/>
    </RelativeLayout>
    <ListView android:id="@id/lv_catelog" android:background="@drawable/item_bg" android:fadingEdge="none"
              android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="8.0dip"
              android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="4.0dip"
              android:cacheColorHint="#00000000" android:layout_weight="1.0" android:fastScrollEnabled="true"/>
    <TextView
            android:id="@+id/noData"
            android:layout_width="match_parent"

            android:gravity="center_vertical|center_horizontal"
            android:layout_height="0.0dip"
            android:layout_marginLeft="8.0dip"
            android:layout_marginTop="8.0dip"
            android:layout_marginRight="8.0dip"
            android:layout_marginBottom="80.0dip"
            android:cacheColorHint="#00000000"
            android:layout_weight="1.0"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            android:text="@string/msg_nodata"/>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip">
        <Button android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/btn_all"
                android:background="@drawable/btn_button" android:layout_width="0.0dip" android:layout_height="48.0dip"
                android:text="@string/all" android:layout_weight="1.0"/>
        <Button android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/btn_search"
                android:background="@drawable/btn_button" android:layout_width="0.0dip" android:layout_height="48.0dip"
                android:text="@string/search" android:layout_weight="1.0"/>
        <Button android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/btn_favorite"
                android:background="@drawable/btn_button" android:layout_width="0.0dip" android:layout_height="48.0dip"
                android:layout_marginLeft="3.0dip" android:text="@string/favorite" android:layout_weight="1.0"/>
    </LinearLayout>
</LinearLayout>