<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/ll_parent" android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/toolbar" android:layout_width="fill_parent"
                    android:layout_height="46.0dip">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="#ffffffff"
                  android:id="@id/tv_app_title" android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/app_name" android:layout_centerHorizontal="true"
                  android:layout_centerVertical="true"/>
        <Button android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/btn_back"
                android:background="@drawable/btn_left" android:paddingLeft="6.0dip" android:layout_width="72.0dip"
                android:layout_height="46.0dip" android:text="@string/back" android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>
        <!--<ImageView android:id="@id/iv_font_small" android:background="@drawable/btn_font_down"-->
                   <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
                   <!--android:layout_alignParentRight="true" android:layout_centerVertical="true"/>-->
        <!--<ImageView android:id="@id/iv_font_big" android:background="@drawable/btn_font_up"-->
                   <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
                   <!--android:layout_toLeftOf="@id/iv_font_small" android:layout_centerVertical="true"/>-->
    </RelativeLayout>
    <ScrollView android:id="@id/scrollView1" android:background="@drawable/item_bg2" android:layout_width="fill_parent"
                android:layout_height="0.0dip" android:layout_margin="8.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:layout_width="fill_parent"
                      android:layout_height="fill_parent">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/tv_title"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:gravity="center"
                      android:layout_margin="5.0dip" android:text="标题" style="@style/black_normal"/>

            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/tv_author"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:gravity="center"
                      android:layout_margin="5.0dip" android:text="作者" style="@style/black_normal"/>

            <TextView android:textSize="20sp" android:id="@+id/tv_content"
                      android:layout_width="fill_parent" android:layout_height="fill_parent"
                      android:gravity="center"
                      android:layout_marginTop="10dp"  android:layout_marginLeft="5.0dip"
                      android:layout_marginRight="5.0dip" android:text="内容" android:lineSpacingMultiplier="1.3"
                      style="@style/black_normal"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="20dp"
                          android:layout_marginLeft="5.0dip"
                          android:layout_marginRight="5.0dip">
                <View android:layout_width="0dp" android:layout_weight="1"  android:background="#ff666666" android:layout_height="1px"></View>
                <View android:layout_width="0dp"  android:layout_weight="1"  android:layout_height="1dp"></View>
                </LinearLayout>

            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@+id/tvNotation"
                      android:layout_width="fill_parent" android:layout_height="fill_parent"
                      android:layout_marginLeft="5.0dip"
                      android:layout_marginRight="5.0dip" android:layout_marginTop="15dp" android:text="注解" android:lineSpacingMultiplier="1.3"
                      style="@style/black_normal"/>
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@+id/tvTranslation"
                      android:layout_width="fill_parent" android:layout_height="fill_parent"
                      android:layout_marginLeft="5.0dip"
                      android:layout_marginRight="5.0dip" android:layout_marginTop="15dp" android:text="翻译" android:lineSpacingMultiplier="1.3"
                      style="@style/black_normal"/>
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@+id/tvAnalysis"
                      android:layout_width="fill_parent" android:layout_height="fill_parent"
                      android:layout_marginLeft="5.0dip"
                      android:layout_marginRight="5.0dip" android:layout_marginTop="15dp" android:text="赏析" android:lineSpacingMultiplier="1.3"
                      style="@style/black_normal"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:background="#ff6d84a2" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <Button android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0sp"
                android:textColor="@color/white" android:gravity="center" android:id="@+id/btnViewComment"
                android:background="@drawable/mm_title_btn" android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_height="fill_parent" android:text="@string/view_comment" android:layout_weight="0.1"/>
        <Button android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0sp"
                android:textColor="@color/white" android:gravity="center" android:id="@id/btnComment"
                android:background="@drawable/mm_title_btn" android:layout_width="0.0dip"
                android:layout_marginLeft="5dp"
                android:layout_height="fill_parent" android:text="@string/comment" android:layout_weight="0.9"/>
        <Button android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0sp"
                android:textColor="@color/white" android:gravity="center" android:id="@+id/btnAudio"
                android:background="@drawable/mm_title_btn" android:layout_width="0.0dip"
                android:layout_marginLeft="5dp"
                android:layout_height="fill_parent" android:text="@string/readit" android:layout_weight="0.9"/>
        <Button android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0sp"
                android:layout_weight="0.1"
                android:textColor="@color/white" android:gravity="center" android:id="@id/btn_favorite"
                android:background="@drawable/mm_title_btn" android:layout_width="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="5dp"
                android:layout_height="fill_parent" android:text="@string/add_love"/>
    </LinearLayout>
</LinearLayout>